# bayes-ltv

./: .gitattributes  .gitignore  LICENSE  README.md  configure.sh  pyproject.toml
paper/: refs.bib  stochastic_process_impulse_response_models.tex
src/experiments/: context.py  plots_utils_common.py
src/experiments/ant/: ant_postprocessing.py  ant_processing.py  ant_synthetic_sine_pulses_curved_velocity.ipynb  evaluate.py  plots_utils.py  synthetic_data.py
src/experiments/ltie_estimation/: calibration.py  ltie_model_experiments.ipynb  plots_utils.py
src/experiments/ltv_estimation/: ltv_model_experiments.ipynb  plots_utils.py  processing.py
src/models/: ltie.py  ltv.py
tests/: conftest.py  run_tests.sh
tests/experiments_tests/: test_context.py  test_plots_utils_common.py
tests/experiments_tests/ant_tests/: test_ant_postprocessing.py  test_ant_processing.py  test_evaluate.py  test_plots_utils.py  test_synthetic_data.py
tests/experiments_tests/ltie_estimation_tests/: test_calibration.py  test_plots_utils.py
tests/experiments_tests/ltv_estimation_tests/: test_plots_utils.py  test_processing.py
tests/models_tests/: test_ltie.py  test_ltv.py
